--- a/mqtt-spy/src/main/resources/ui/fxml/NewPublicationPane.fxml
+++ b/mqtt-spy/src/main/resources/ui/fxml/NewPublicationPane.fxml
@@ -22,52 +22,39 @@
  */
 -->
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioMenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import org.fxmisc.richtext.*?>
 
-<?import org.fxmisc.richtext.StyleClassedTextArea?>
-
-<AnchorPane prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.baczkowicz.mqttspy.ui.controllers.NewPublicationController">
+<AnchorPane prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.baczkowicz.mqttspy.ui.controllers.NewPublicationController">
 	<padding><Insets bottom="3" left="6" right="6" top="6" /></padding>
 	<children>
-            
+
         <!-- Topic -->
-        <Label styleClass="normal-font" layoutX="14.0" layoutY="15.0" text="Topic" AnchorPane.topAnchor="5.0" />
-        
-        <ComboBox fx:id="publicationTopicText" editable="true" styleClass="normal-font" layoutX="53.0" layoutY="10.0" prefHeight="26.0" AnchorPane.leftAnchor="53.0" AnchorPane.rightAnchor="327" AnchorPane.topAnchor="0.0" />
-        
-        <!-- Data -->        
-        <Label fx:id="dataLabel" styleClass="normal-font" layoutX="14.0" text="Data" AnchorPane.topAnchor="31.0" />
-        	        
-        <Label fx:id="lengthLabel" styleClass="small-font" alignment="CENTER" contentDisplay="CENTER" layoutX="5.0" prefWidth="47.0" text="(0B)" AnchorPane.topAnchor="44.0" />			
-      	       		    
-        <StyleClassedTextArea fx:id="publicationData" styleClass="normal-font" prefHeight="25.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="326" AnchorPane.topAnchor="31.0" />
-        
+        <Label layoutX="14.0" layoutY="15.0" styleClass="normal-font" text="Topic" AnchorPane.topAnchor="5.0" />
+
+        <ComboBox fx:id="publicationTopicText" editable="true" layoutX="53.0" layoutY="10.0" prefHeight="26.0" styleClass="normal-font" AnchorPane.leftAnchor="53.0" AnchorPane.rightAnchor="327" AnchorPane.topAnchor="0.0" />
+
+        <!-- Data -->
+        <Label fx:id="dataLabel" layoutX="14.0" styleClass="normal-font" text="Data" AnchorPane.topAnchor="31.0" />
+
+        <Label fx:id="lengthLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="5.0" prefWidth="47.0" styleClass="small-font" text="(0B)" AnchorPane.topAnchor="44.0" />
+
+        <StyleClassedTextArea fx:id="publicationData" prefHeight="25.0" styleClass="normal-font" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="326" AnchorPane.topAnchor="31.0" />
+
         <!-- Retained flag -->
-        <Label fx:id="retainedLabel" text="Retained" styleClass="normal-font" AnchorPane.rightAnchor="153" AnchorPane.topAnchor="5.0" />        	
-        
-        <CheckBox fx:id="retainedBox" styleClass="normal-font" mnemonicParsing="false" AnchorPane.rightAnchor="123" AnchorPane.topAnchor="4.0" />	         
+        <Label fx:id="retainedLabel" styleClass="normal-font" text="Retained" AnchorPane.rightAnchor="153" AnchorPane.topAnchor="5.0" />
+
+        <CheckBox fx:id="retainedBox" mnemonicParsing="false" styleClass="normal-font" AnchorPane.rightAnchor="123" AnchorPane.topAnchor="4.0" />
 
 		<!-- QoS -->
-        <Label fx:id="publicationQosLabel" styleClass="normal-font" layoutX="473.0" layoutY="5.0" text="QoS" AnchorPane.rightAnchor="291" AnchorPane.topAnchor="5.0" />        	  
-             
-        <ChoiceBox fx:id="publicationQosChoice" styleClass="normal-font" prefHeight="25.0" prefWidth="14.0" value="0" AnchorPane.rightAnchor="244" AnchorPane.topAnchor="0.0">
+        <Label fx:id="publicationQosLabel" layoutX="473.0" layoutY="5.0" styleClass="normal-font" text="QoS" AnchorPane.rightAnchor="291" AnchorPane.topAnchor="5.0" />
+
+        <ChoiceBox fx:id="publicationQosChoice" prefHeight="25.0" prefWidth="14.0" styleClass="normal-font" value="0" AnchorPane.rightAnchor="244" AnchorPane.topAnchor="0.0">
 			<items>
 			   <FXCollections fx:factory="observableArrayList">
 			      <String fx:value="0" />
@@ -76,8 +63,8 @@
 			   </FXCollections>
 			</items>
         </ChoiceBox>
-        
-        <MenuButton fx:id="formatMenu" styleClass="normal-font" mnemonicParsing="false" prefHeight="26.0" prefWidth="189.0" text="Input format: Plain" AnchorPane.rightAnchor="128" AnchorPane.topAnchor="32.0">
+
+        <MenuButton fx:id="formatMenu" mnemonicParsing="false" prefHeight="26.0" prefWidth="189.0" styleClass="normal-font" text="Input format: Plain" AnchorPane.rightAnchor="128" AnchorPane.topAnchor="32.0">
 			<items>
 			    <RadioMenuItem mnemonicParsing="false" text="Plain">
 			       <toggleGroup>
@@ -87,14 +74,14 @@
 			    <RadioMenuItem mnemonicParsing="false" text="Hex" toggleGroup="$formatGroup" />
 			    <RadioMenuItem mnemonicParsing="false" text="Base64" toggleGroup="$formatGroup" />
 			</items>
-		</MenuButton>        
-		
-		<SplitMenuButton fx:id="publishButton" disable="true" styleClass="normal-font" mnemonicParsing="false" onAction="#publish" prefHeight="58.0" prefWidth="120" text="Publish" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		</MenuButton>
+
+		<SplitMenuButton fx:id="publishButton" disable="true" mnemonicParsing="false" onAction="#publish" prefHeight="58.0" prefWidth="120" styleClass="normal-font" text="123" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
 			<graphic>
 	      		<ImageView fitHeight="24" fitWidth="24" pickOnBounds="true">
 			         <image>
-			            <Image url="/ui/images/mail-forward-6.png" />
+<!--			            <Image url="/ui/images/mail-forward-6.png" />-->
 			         </image>
 			      </ImageView>
 	      	</graphic>
@@ -114,6 +101,7 @@
                   <Menu fx:id="recentMessagesMenu" disable="true" mnemonicParsing="false" text="Restore recent message" />
             </items>
 		</SplitMenuButton>
+      <Label layoutX="12.0" layoutY="68.0" text="Label" />
 		
    	</children>
 </AnchorPane>
